// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input renders correctly 1`] = `
<div
  className="element-container css-0"
>
  <input
    className="element"
    name="Name"
    type="text"
  />
  <span
    className="after-form-element"
  />
</div>
`;

exports[`Input renders required input correctly 1`] = `
<div
  className="element-container css-0"
>
  <input
    className="element"
    name="Name"
    required={true}
    type="text"
  />
  <span
    className="after-form-element"
  />
</div>
`;
